--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
 <head>
 	<title>JetpackJoe: Part 2</title>
+	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Ubuntu%20Mono' />
 	<link rel='stylesheet' href='css/main.css' />
+	<script src='js/game.js'></script>
+	<script src='js/init.js'></script>
 </head>
 <body>
-	<div id='noscript'></div>
+	<div id='noscript'>
+		You need to upgrade your browser!
+	</div>
 </body>
 </html>
