--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title>JetpackJoe: Part 2</title>
 	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Ubuntu%20Mono' />
 	<link rel='stylesheet' href='css/main.css' />
-	<script src='js/game.js'></script>
-	<script src='js/init.js'></script>
+	<!-- <script type='module' src='js/game.js'></script> -->
+	<!-- <script type='module' src='js/init.js'></script> -->
 </head>
 <body>
 	<div id='noscript'>
