--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 	<title>JetpackJoe: Part 2</title>
 	<meta name='viewport' content='width=device-width'>
 	<link rel='stylesheet' href='css/main.css' />
+	<link rel='apple-touch-icon' href='img/planet/icon.png' />
+	<link rel='shortcut icon' href='img/planet/icon.png' />
+	<link rel='favicon' href='img/planet/icon.png' />
+	<link rel='icon' href='img/planet/icon.png' />
 	<script>
 		window.onerror = function err() {
 			alert(Array.from(arguments));
