--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name='viewport' content='width=device-width' />
 	<meta name='twitter:card' content='summary_large_image' />
 	<meta property='og:title' content='Jetpack Joe: Lost in Space' />
-	<meta property='og:description' content='In part two of Jetpack Joe, Joe discovers he has made a few minor errors, and has gone the wrong direction in search of SunTown(™), so he has to go in a new direction to find it.' />
+	<meta property='og:description' content='In part two of Jetpack Joe, Joe discovers he has made a few minor errors, and has gone the wrong direction in search of SunTown(tm), so he has to go in a new direction to find it.' />
 	<meta property='og:image' content='img/planet/icon.png' />
 	<link rel='stylesheet' href='css/main.css' />
 	<link rel='apple-touch-icon' href='img/planet/icon.png' />
