--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 	<meta name='viewport' content='width=device-width' />
 	<meta name='twitter:card' content='summary_large_image' />
 	<meta property='og:title' content='Jetpack Joe: Lost in Space' />
-	<meta property='og:description' content='In part two of Jetpack Joe, Joe discovers he has made several farely severe errors, and has gone the wrong direction altogether in search of SunTown(tm), so now he must go in a new direction to find it.' />
-	<meta property='og:image' content='img/planet/icon.png' />
+	<meta property='og:description' content='Jetpack Joe is lost again, and needs your help!' />
+	<meta property='og:image' content='img/planet/icon-512x.png' />
+	<meta property='twitter:title' content='Jetpack Joe: Lost in Space' />
+	<meta property='twitter:description' content='Jetpack Joe is lost again, and needs your help!' />
+	<meta property='twitter:image' content='img/planet/icon-512x.png' />
 	<link rel='stylesheet' href='css/main.css' />
 	<link rel='apple-touch-icon' href='img/planet/icon.png' />
 	<link rel='shortcut icon' href='img/planet/icon.png' />
