--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<meta name='twitter:card' content='summary_large_image' />
 	<meta property='og:title' content='Jetpack Joe: Lost in Space' />
 	<meta property='og:description' content='Jetpack Joe is lost again, and needs your help!' />
-	<meta property='og:image' content='JetpackJoe2/img/planet/icon-512x.png' />
+	<meta property='og:image' content='img/planet/icon-512x.png' />
 	<meta property='twitter:title' content='Jetpack Joe: Lost in Space' />
 	<meta property='twitter:description' content='Jetpack Joe is lost again, and needs your help!' />
-	<meta property='twitter:image' content='JetpackJoe2/img/planet/icon-512x.png' />
+	<meta property='twitter:image' content='img/planet/icon-512x.png' />
 	<link rel='stylesheet' href='css/main.css' />
 	<link rel='apple-touch-icon' href='img/planet/icon.png' />
 	<link rel='shortcut icon' href='img/planet/icon.png' />
