--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<meta name='twitter:card' content='summary' />
 	<meta property='og:title' content='Jetpack Joe: Lost in Space' />
 	<meta property='og:description' content='Jetpack Joe is lost again, and needs your help!' />
-	<meta property='og:image' content='img/planet/icon-512x.png' />
+	<meta property='og:image' content='assets/img/planet/icon-512x.png' />
 	<link rel='stylesheet' href='css/main.css' />
-	<link rel='apple-touch-icon' href='img/planet/icon.png' />
-	<link rel='shortcut icon' href='img/planet/icon.png' />
-	<link rel='favicon' href='img/planet/icon.png' />
-	<link rel='icon' href='img/planet/icon.png' />
+	<link rel='apple-touch-icon' href='assets/img/planet/icon.png' />
+	<link rel='shortcut icon' href='assets/img/planet/planet_64x.png' />
+	<link rel='favicon' href='assets/img/planet/planet_64x.png' />
+	<link rel='icon' href='assets/img/planet/planet_64x.png' />
 	<script>
 		// If there is an error, alert( ... ) it
 		// so that it is visible without F12
