--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>JetpackJoe: Part 2</title>
 	<meta name='viewport' content='width=device-width' />
-	<meta name='twitter:card' content='summary' />
+	<meta name='twitter:card' content='summary_large_image' />
 	<meta property='og:title' content='Jetpack Joe: Lost in Space' />
 	<meta property='og:description' content='Jetpack Joe is lost again, and needs your help!' />
 	<meta property='og:image' content='assets/img/planet/icon-512x.png' />
