--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>JetpackJoe: Part 2</title>
 	<meta name='twitter:card' content='summary_large_image' />
+	<meta name='twitter:creator' content='iPhoneGuy1101, sams_kc' />
 	<meta property='og:title' content='Jetpack Joe: Lost in Space' />
 	<meta property='og:description' content='Jetpack Joe is lost again, and needs your help!' />
 	<meta property='og:image' content='assets/img/planet/icon-512x.png' />
