--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<script>
 		// If there is an error, alert( ... ) it
 		// so that it is visible without F12
-		window.onerror = function err() {
+		window.onerror = function onerror() {
 			alert(Array.from(arguments));
 		};
 	</script>
