--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>JetpackJoe: Part 2</title>
 	<meta name='twitter:card' content='summary_large_image' />
 	<meta name='twitter:creator' content='iPhoneGuy1101, sams_kc' />
+	<meta name='twitter:image' content='assets/img/planet/icon-512x.png' />
 	<meta property='og:title' content='Jetpack Joe: Lost in Space' />
 	<meta property='og:description' content='Jetpack Joe is lost again, and needs your help!' />
 	<meta property='og:image' content='assets/img/planet/icon-512x.png' />
