--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
 <head>
 	<title>JetpackJoe: Part 2</title>
+	<!-- Holy fucking cards -->
 	<meta name='twitter:card' content='summary_large_image' />
 	<meta name='twitter:creator' content='iPhoneGuy1101, sams_kc' />
 	<meta name='twitter:image' content='assets/img/planet/icon-512x.png' />
 	<meta property='og:title' content='Jetpack Joe: Lost in Space' />
 	<meta property='og:description' content='Jetpack Joe is lost again, and needs your help!' />
 	<meta property='og:image' content='assets/img/planet/icon-512x.png' />
+	<!-- Crappy Style Shit -->
 	<link rel='stylesheet' href='css/main.css' />
+	<!-- Icons my god -->
 	<link rel='apple-touch-icon' href='assets/img/planet/icon.png' />
 	<link rel='shortcut icon' href='assets/img/planet/planet_64x.png' />
 	<link rel='favicon' href='assets/img/planet/planet_64x.png' />
