Is there a good `git` client for ChromeOS without dev mode

--- a/index.html
+++ b/index.html
@@ -29,5 +29,18 @@
 	<div id='noscript'>
 		Loading...
 	</div>
+	<div class='mobile'>
+		<!-- 
+			=> &#x21d2;
+		-->
+		<table id='dpad'>
+			<tr>
+				<td id='dpad_left'>&#8678;</td>
+				<td id='dpad_right'>&#8680;</td>
+			</tr>
+		</table>
+		<span class='btn' id='btn_a'>+</span>
+		<span class='btn' id='btn_b'>+</span>
+	</div>
 </body>
 </html>
